noinst_LTLIBRARIES = libsingleton.la

libsingleton_la_SOURCES = \
	CreationStatic.hpp CreationStatic.inl \
	CreationUsingNew.hpp CreationUsingNew.inl \
	LifetimeDefault.hpp LifetimeDefault.inl \
	LifetimeLibrary.cpp LifetimeLibrary.hpp LifetimeLibrary.inl \
	LifetimeWithLongevity.hpp LifetimeWithLongevity.inl \
	PrivateMembers.cpp PrivateMembers.hpp PrivateMembers.inl \
	SingletonHolder.hpp SingletonHolder.inl 


pkginclude_HEADERS = \
	CreationStatic.hpp CreationStatic.inl \
	CreationUsingNew.hpp CreationUsingNew.inl \
	LifetimeDefault.hpp LifetimeDefault.inl \
	LifetimeLibrary.hpp LifetimeLibrary.inl \
	LifetimeWithLongevity.hpp LifetimeWithLongevity.inl \
	PrivateMembers.hpp PrivateMembers.inl \
	SingletonHolder.hpp SingletonHolder.inl 

pkgincludedir=$(includedir)/curlpp/utilspp/singleton


