pkginclude_HEADERS = \
	CreationStatic.hpp CreationStatic.inl \
	CreationUsingNew.hpp CreationUsingNew.inl \
	LifetimeDefault.hpp LifetimeDefault.inl \
	LifetimeLibrary.hpp LifetimeLibrary.inl \
	LifetimeWithLongevity.hpp LifetimeWithLongevity.inl \
	PrivateMembers.hpp PrivateMembers.inl \
	SingletonHolder.hpp SingletonHolder.inl 

pkgincludedir=$(includedir)/utilspp/singleton


